--- a/requirements.in
+++ b/requirements.in
@@ -12,11 +12,13 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.2.5
 django-axes==5.9.0
+django-constance==2.8.0
 django-cors-headers==3.5.0
 django-deprecate-fields==0.1.1
 django-extensions==3.1.2
 django-filter==2.4.0
 django-loginas==0.3.9
+django-picklefield==3.0.1
 django-redis==4.12.1
 django-statsd==2.5.2
 django-structlog==2.1.3
