--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,8 @@ dj-database-url==0.5.0
     # via -r requirements.in
 django-axes==5.9.0
     # via -r requirements.in
+django-constance==2.8.0
+    # via -r requirements.in
 django-cors-headers==3.5.0
     # via -r requirements.in
 django-deprecate-fields==0.1.1
@@ -69,6 +71,8 @@ django-ipware==3.0.2
     #   django-axes
     #   django-structlog
 django-loginas==0.3.9
+    # via -r requirements.in
+django-picklefield==3.0.1
     # via -r requirements.in
 django-redis==4.12.1
     # via -r requirements.in
@@ -86,6 +90,7 @@ django==3.2.5
     #   django-deprecate-fields
     #   django-extensions
     #   django-filter
+    #   django-picklefield
     #   django-redis
     #   django-rest-hooks
     #   django-structlog
