--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,6 +4,22 @@ on:
     pull_request:
     push:
         branches: [master]
+env:
+    SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
+    REDIS_URL: 'redis://localhost'
+    DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog'
+    DISABLE_SECURE_SSL_REDIRECT: 1
+    SECURE_COOKIES: 0
+    OPT_OUT_CAPTURE: 1
+    SELF_CAPTURE: 0
+    E2E_TESTING: 1
+    TEST: 1
+    CLICKHOUSE_DATABASE: 'posthog_test'
+    EMAIL_HOST: 'email.test.posthog.net' # used to test password resets
+    SITE_URL: 'test.posthog.net' # used to test password resets
+    NO_RESTART_LOOP: 1
+    PRIMARY_DB: clickhouse
+    CLICKHOUSE_SECURE: 0
 
 jobs:
     # Job that lists and chunks spec file names and caches node modules
@@ -120,20 +136,6 @@ jobs:
                   cd plugin-server
                   yarn build
             - name: Boot PostHog
-              env:
-                  SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
-                  REDIS_URL: 'redis://localhost'
-                  DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog'
-                  DISABLE_SECURE_SSL_REDIRECT: 1
-                  SECURE_COOKIES: 0
-                  OPT_OUT_CAPTURE: 1
-                  SELF_CAPTURE: 0
-                  E2E_TESTING: 1
-                  EMAIL_HOST: 'email.test.posthog.net' # used to test password resets
-                  SITE_URL: 'test.posthog.net' # used to test password resets
-                  NO_RESTART_LOOP: 1
-                  PRIMARY_DB: clickhouse
-                  CLICKHOUSE_SECURE: 0
               run: |
                   python manage.py collectstatic --noinput &
                   ./bin/docker-migrate &
