Type `LineGraph.jsx` and deprecate Posthog/Chart.js dependency (#7722)

--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
         "antd": "^4.17.1",
         "antd-dayjs-webpack-plugin": "^1.0.6",
         "babel-preset-nano-react-app": "^0.1.0",
+        "chart.js": "^3.6.2",
         "chartjs-adapter-dayjs": "^1.0.0",
-        "chartjs-plugin-crosshair": "^1.1.6",
+        "chartjs-plugin-crosshair": "^1.2.0",
         "clsx": "^1.1.1",
         "core-js": "3.15.2",
         "d3": "^5.15.0",
@@ -134,7 +135,8 @@
         "@storybook/react": "^6.3.11",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
-        "@types/chart.js": "^2.9.32",
+        "@types/chart.js": "^2.9.34",
+        "@types/chartjs-plugin-crosshair": "^1.1.1",
         "@types/d3": "^7.0.0",
         "@types/jest": "^26.0.15",
         "@types/query-selector-shadow-dom": "^1.0.0",
