--- a/package.json
+++ b/package.json
@@ -210,7 +210,7 @@
         "(frontend/**).{js,jsx,mjs,ts,tsx}": "eslint -c .eslintrc.js --fix",
         "(plugin-server/**).{js,jsx,mjs,ts,tsx}": "eslint -c plugin-server/.eslintrc.js --fix",
         "*.{py,pyi}": [
-            "flake8 --select=E9,F63,F7,F82,W605",
+            "flake8",
             "black",
             "isort"
         ]
