--- a/plugin-server/package.json
+++ b/plugin-server/package.json
@@ -65,6 +65,7 @@
         "adm-zip": "0.5.3",
         "aws-sdk": "^2.927.0",
         "escape-string-regexp": "^4.0.0",
+        "ethers": "^5.5.2",
         "faker": "^5.5.3",
         "fast-deep-equal": "^3.1.3",
         "generic-pool": "^3.7.1",
