--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,6 +4,22 @@ on:
     pull_request:
     push:
         branches: [master]
+env:
+    SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
+    REDIS_URL: 'redis://localhost'
+    DATABASE_URL: 'postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/postgres'
+    DISABLE_SECURE_SSL_REDIRECT: 1
+    SECURE_COOKIES: 0
+    OPT_OUT_CAPTURE: 1
+    SELF_CAPTURE: 0
+    E2E_TESTING: 1
+    EMAIL_HOST: 'email.test.posthog.net' # used to test password resets
+    SITE_URL: 'test.posthog.net' # used to test password resets
+    NO_RESTART_LOOP: 1
+    CLICKHOUSE_HOST: 'localhost'
+    CLICKHOUSE_SECURE: 'False'
+    CLICKHOUSE_VERIFY: 'False'
+    SAML_DISABLED: 1
 
 jobs:
     # Job that lists and chunks spec file names and caches node modules
@@ -50,99 +66,15 @@ jobs:
             matrix:
                 specs: ${{ fromJson(needs.cypress_prep.outputs.specs) }}
 
-        services:
-            postgres:
-                image: postgres:12
-                env:
-                    POSTGRES_USER: postgres
-                    POSTGRES_PASSWORD: postgres
-                    POSTGRES_DB: postgres
-                ports:
-                    # Maps port 5432 on service container to the host
-                    # Needed because `postgres` host is not discoverable for some reason
-                    - 5432:5432
-                options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-            redis:
-                image: redis
-                ports:
-                    # Maps port 6379 on service container to the host
-                    # Needed because `redis` host is not discoverable for some reason
-                    - 6379:6379
-                options: >-
-                    --health-cmd "redis-cli ping"
-                    --health-interval 10s
-                    --health-timeout 5s
-                    --health-retries 5
         steps:
             - name: Checkout
               uses: actions/checkout@v2
 
-            - name: Set up Python 3.8
-              uses: actions/setup-python@v2
-              with:
-                  python-version: 3.8
+            - name: Start stack with Docker Compose
+              run: |
+                  docker-compose -f ee/docker-compose.ch.yml down
+                  docker-compose -f ee/docker-compose.ch.yml up
 
-            - uses: syphar/restore-virtualenv@v1.2
-              id: cache-virtualenv
-              with:
-                  requirement_files: requirements.txt # this is optional
-            - uses: syphar/restore-pip-download-cache@v1
-              if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-            - name: Install python dependencies
-              if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install $(grep -ivE "psycopg2" requirements.txt | cut -d'#' -f1) --no-cache-dir --compile
-                  python -m pip install psycopg2-binary --no-cache-dir --compile
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 14
-            - uses: actions/cache@v2
-              id: cypress-node-modules-cache-3
-              with:
-                  path: |
-                      **/node_modules
-                      ~/.cache/Cypress
-                  key: ${{ runner.os }}-cypress-node-modules-3-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-cypress-node-modules-3-
-            - name: Yarn install deps
-              # NOTE: we always try to run yarn install, as we're using a cache
-              # from the prep phase that hasn't been proven to be correct. We
-              # should still get some cache benefits.
-              run: |
-                  yarn install --frozen-lockfile
-                  yarn add cypress@6.7.0 cypress-terminal-report@2.1.0 @cypress/react@4.16.4 @cypress/webpack-preprocessor@5.7.0
-                  cd plugin-server
-                  yarn install --frozen-lockfile
-            - name: Yarn build
-              env:
-                  GENERATE_SOURCEMAP: 'false'
-              run: |
-                  yarn build
-                  cd plugin-server
-                  yarn build
-            - name: Boot PostHog
-              env:
-                  SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
-                  REDIS_URL: 'redis://localhost'
-                  DATABASE_URL: 'postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/postgres'
-                  DISABLE_SECURE_SSL_REDIRECT: 1
-                  SECURE_COOKIES: 0
-                  OPT_OUT_CAPTURE: 1
-                  SELF_CAPTURE: 0
-                  E2E_TESTING: 1
-                  EMAIL_HOST: 'email.test.posthog.net' # used to test password resets
-                  SITE_URL: 'test.posthog.net' # used to test password resets
-                  NO_RESTART_LOOP: 1
-              run: |
-                  python manage.py collectstatic --noinput &
-                  ./bin/docker-migrate &
-                  wait
-                  python manage.py setup_dev
-                  mkdir -p /tmp/logs
-                  ./bin/docker-worker &> /tmp/logs/worker.txt &
-                  ./bin/docker-server &> /tmp/logs/server.txt &
             - name: Cypress run
               uses: cypress-io/github-action@v2
               with:
