--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,7 +7,7 @@ on:
 env:
     SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
     REDIS_URL: 'redis://localhost'
-    DATABASE_URL: 'postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/postgres'
+    DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
     DISABLE_SECURE_SSL_REDIRECT: 1
     SECURE_COOKIES: 0
     OPT_OUT_CAPTURE: 1
