--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,7 +73,7 @@ jobs:
             - name: Start stack with Docker Compose
               run: |
                   docker-compose -f ee/docker-compose.ch.yml down
-                  docker-compose -f ee/docker-compose.ch.yml up db clickhouse zookeeper kafka redis
+                  docker-compose -f ee/docker-compose.ch.yml up -d db clickhouse zookeeper kafka redis
 
             - name: Set up Python 3.8
               uses: actions/setup-python@v2
