--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,7 +8,7 @@ env:
     SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
     REDIS_URL: 'redis://localhost'
     DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog'
-    KAFKA_URL: 'kafka://kafka:9092'
+    KAFKA_URL: 'kafka://localhost:9092'
     DISABLE_SECURE_SSL_REDIRECT: 1
     SECURE_COOKIES: 0
     OPT_OUT_CAPTURE: 1
@@ -72,9 +72,6 @@ jobs:
               run: |
                   docker-compose -f ee/docker-compose.ch.yml down
                   docker-compose -f ee/docker-compose.ch.yml up -d db clickhouse zookeeper kafka redis &
-
-            - name: Add kafka host to /etc/hosts for kafka connectivity
-              run: sudo echo "127.0.0.1 kafka" | sudo tee -a /etc/hosts
 
             - name: Set up Python 3.8
               uses: actions/setup-python@v2
