--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -156,8 +156,8 @@ jobs:
 
             - name: Start stack with Docker Compose
               run: |
-                  docker-compose -f ee/docker-compose.ch.yml down
-                  docker-compose -f ee/docker-compose.ch.yml up -d ${{ matrix.foss && 'db' || 'db clickhouse zookeeper kafka' }} &
+                  docker-compose -f docker-compose.dev.yml down
+                  docker-compose -f docker-compose.dev.yml up -d ${{ matrix.foss && 'db' || 'db clickhouse zookeeper kafka' }} &
 
             - name: Set up Python
               uses: actions/setup-python@v2
@@ -282,8 +282,8 @@ jobs:
                   cat requirements.txt >> deploy/requirements.txt
             - name: Start stack with Docker Compose
               run: |
-                  docker-compose -f deploy/ee/docker-compose.ch.yml down
-                  docker-compose -f deploy/ee/docker-compose.ch.yml up -d db clickhouse zookeeper kafka &
+                  docker-compose -f deploy/docker-compose.dev.yml down
+                  docker-compose -f deploy/docker-compose.dev.yml up -d db clickhouse zookeeper kafka &
             - name: Set up Python 3.8
               uses: actions/setup-python@v2
               with:
