--- a/plugin-server/package.json
+++ b/plugin-server/package.json
@@ -35,9 +35,9 @@
         "setup:test:ee": "yarn setup:test:postgres && yarn setup:test:clickhouse",
         "setup:test:postgres": "cd .. && python manage.py setup_test_environment",
         "setup:test:clickhouse": "cd .. && unset KAFKA_URL && export TEST=1 PRIMARY_DB=clickhouse CLICKHOUSE_DATABASE=posthog_test && python manage.py migrate_clickhouse",
-        "services:start": "cd .. && docker-compose -f ee/docker-compose.ch.yml up zookeeper kafka clickhouse",
-        "services:stop": "cd .. && docker-compose -f ee/docker-compose.ch.yml down",
-        "services:clean": "cd .. && docker-compose -f ee/docker-compose.ch.yml rm -v zookeeper kafka clickhouse",
+        "services:start": "cd .. && docker-compose -f docker-compose.dev.yml up zookeeper kafka clickhouse",
+        "services:stop": "cd .. && docker-compose -f docker-compose.dev.yml down",
+        "services:clean": "cd .. && docker-compose -f docker-compose.dev.yml rm -v zookeeper kafka clickhouse",
         "services": "yarn services:stop && yarn services:clean && yarn services:start"
     },
     "bin": {
