--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -22,7 +22,6 @@ jobs:
             SAML_DISABLED: '1'
             DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog_test'
             REDIS_URL: 'redis://localhost'
-            PRIMARY_DB: 'clickhouse'
             DEBUG: '1'
             CLICKHOUSE_DATABASE: posthog
             CLICKHOUSE_HOST: ${{ secrets.BENCHMARKS_CLICKHOUSE_HOST }}
@@ -91,7 +90,7 @@ jobs:
 
             - name: Set up PostHog
               run: |
-                  ./bin/docker-migrate & wait
+                  python manage.py migrate & wait
                   python manage.py setup_dev --no-data
 
             - name: Configure benchmarks
