--- a/plugin-server/package.json
+++ b/plugin-server/package.json
@@ -6,8 +6,7 @@
     "main": "dist/index.js",
     "scripts": {
         "test": "jest --runInBand --forceExit tests/**/*.test.ts",
-        "test:shared": "jest --runInBand --forceExit tests/*/**/*.test.ts --testPathIgnorePatterns tests/clickhouse/* --testPathIgnorePatterns tests/postgres/*",
-        "test:postgres:1": "jest --runInBand --forceExit tests/*.test.ts",
+        "test:postgres:1": "jest --runInBand --forceExit tests/**/*.test.ts --testPathIgnorePatterns tests/clickhouse/* --testPathIgnorePatterns tests/postgres/*",
         "test:postgres:2": "jest --runInBand --forceExit tests/postgres/**/*.test.ts",
         "test:clickhouse:1": "jest --runInBand --forceExit tests/clickhouse/**/*.test.ts --testPathIgnorePatterns tests/clickhouse/process-event.test.ts",
         "test:clickhouse:2": "jest --runInBand --forceExit tests/clickhouse/process-event.test.ts",
