--- a/plugin-server/package.json
+++ b/plugin-server/package.json
@@ -6,9 +6,9 @@
     "main": "dist/index.js",
     "scripts": {
         "test": "jest --runInBand --forceExit tests/**/*.test.ts",
-        "test:postgres:1": "jest --runInBand --forceExit tests/**/*.test.ts --testPathIgnorePatterns tests/clickhouse/* --testPathIgnorePatterns tests/postgres/*",
-        "test:postgres:2": "jest --runInBand --forceExit tests/postgres/**/*.test.ts",
-        "test:clickhouse:1": "jest --runInBand --forceExit tests/clickhouse/**/*.test.ts --testPathIgnorePatterns tests/clickhouse/process-event.test.ts",
+        "test:postgres:1": "jest --runInBand --forceExit tests/ --testPathIgnorePatterns tests/clickhouse/ --testPathIgnorePatterns tests/postgres/",
+        "test:postgres:2": "jest --runInBand --forceExit tests/postgres/",
+        "test:clickhouse:1": "jest --runInBand --forceExit tests/clickhouse/ --testPathIgnorePatterns tests/clickhouse/process-event.test.ts",
         "test:clickhouse:2": "jest --runInBand --forceExit tests/clickhouse/process-event.test.ts",
         "benchmark": "yarn run benchmarks:clickhouse && yarn run benchmark:postgres && yarn run benchmarks:vm",
         "benchmark:clickhouse": "node --expose-gc node_modules/.bin/jest --runInBand benchmarks/clickhouse/",
