--- a/requirements.in
+++ b/requirements.in
@@ -20,6 +20,7 @@ django-filter==2.4.0
 django-loginas==0.3.9
 django-picklefield==3.0.1
 django-redis==4.12.1
+django-reversion==4.0.1
 django-statsd==2.5.2
 django-structlog==2.1.3
 djangorestframework==3.12.2
