--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "dependencies": {
         "@babel/core": "^7.10.4",
         "@babel/runtime": "^7.10.4",
+        "@cypress/react": "4.16.4",
+        "@cypress/webpack-preprocessor": "5.7.0",
         "@monaco-editor/react": "^4.1.3",
         "@popperjs/core": "^2.9.2",
         "@posthog/chart.js": "^2.9.6",
@@ -81,6 +83,8 @@
         "chartjs-plugin-crosshair": "^1.2.0",
         "clsx": "^1.1.1",
         "core-js": "3.15.2",
+        "cypress": "6.7.0",
+        "cypress-terminal-report": "2.1.0",
         "d3": "^5.15.0",
         "d3-sankey": "^0.12.3",
         "dayjs": "^1.10.7",
