add foss comment

--- a/.github/workflows/foss-release-image-publish.yml
+++ b/.github/workflows/foss-release-image-publish.yml
@@ -3,6 +3,7 @@
 
 name: Docker FOSS release image
 
+# TODO: Don't sync until the proper ee code relocation is done
 # on:
 #     push:
 #         tags:
