--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -121,9 +121,10 @@ jobs:
             - name: Boot PostHog
               run: |
                   python manage.py collectstatic --noinput &
-                  ./bin/migrate &
+                  ./bin/docker-migrate &
                   wait
                   bin/check_kafka_clickhouse_up
+                  python manage.py migrate_clickhouse
                   python manage.py setup_dev
                   mkdir -p /tmp/logs
                   ./bin/docker-worker &> /tmp/logs/worker.txt &
