add clickhouse to pg tests

--- a/.github/workflows/ci-plugin-server.yml
+++ b/.github/workflows/ci-plugin-server.yml
@@ -60,10 +60,22 @@ jobs:
                     --health-retries 5
         env:
             REDIS_URL: 'redis://localhost'
+            CLICKHOUSE_HOST: 'localhost'
+            CLICKHOUSE_DATABASE: 'posthog_test'
+            KAFKA_ENABLED: 'true'
+            KAFKA_HOSTS: 'kafka:9092'
 
         steps:
             - name: Check out Django server for database setup
               uses: actions/checkout@v2
+
+            - name: Fix Kafka Hostname
+              run: |
+                  sudo bash -c 'echo "127.0.0.1 kafka zookeeper" >> /etc/hosts'
+                  ping -c 1 kafka
+                  ping -c 1 zookeeper
+            - name: Start Kafka, ClickHouse, Zookeeper
+              run: docker-compose -f docker-compose.dev.yml up -d zookeeper kafka clickhouse
 
             - name: Set up Python
               uses: actions/setup-python@v2
@@ -130,10 +142,22 @@ jobs:
                     --health-retries 5
         env:
             REDIS_URL: 'redis://localhost'
+            CLICKHOUSE_HOST: 'localhost'
+            CLICKHOUSE_DATABASE: 'posthog_test'
+            KAFKA_ENABLED: 'true'
+            KAFKA_HOSTS: 'kafka:9092'
 
         steps:
             - name: Check out Django server for database setup
               uses: actions/checkout@v2
+
+            - name: Fix Kafka Hostname
+              run: |
+                  sudo bash -c 'echo "127.0.0.1 kafka zookeeper" >> /etc/hosts'
+                  ping -c 1 kafka
+                  ping -c 1 zookeeper
+            - name: Start Kafka, ClickHouse, Zookeeper
+              run: docker-compose -f docker-compose.dev.yml up -d zookeeper kafka clickhouse
 
             - name: Set up Python
               uses: actions/setup-python@v2
