--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -212,6 +212,11 @@ jobs:
               if: ${{ !matrix.foss }}
               run: bin/check_kafka_clickhouse_up
 
+            - name: Run FOSS tests
+              if: ${{ matrix.foss }}
+              run: |
+                  pytest -m "not ee" posthog/ --cov  --cov-report=xml:coverage-postgres.xml
+
             - name: Run SAML tests
               if: ${{ matrix.saml }}
               run: |
