--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,7 +32,7 @@ jobs:
             - uses: actions/checkout@v2
             - id: set-specs
               # List cypress/integration and produce a JSON array of the files, in chunks
-              run: echo "::set-output name=specs::$(ls cypress/integration/* | jq --slurp --raw-input -c 'split("\n")[:-1] | _nwise(3) | join("\n")' | jq --slurp -c .)"
+              run: echo "::set-output name=specs::$(ls cypress/integration/*.js | jq --slurp --raw-input -c 'split("\n")[:-1] | _nwise(3) | join("\n")' | jq --slurp -c .)"
 
             - uses: actions/cache@v2
               id: cypress-node-modules-cache-3
