--- a/.github/workflows/build-and-deploy-prod.yml
+++ b/.github/workflows/build-and-deploy-prod.yml
@@ -148,8 +148,8 @@ jobs:
                 SLACK_CHANNEL: platform-bots 
                 SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                 SLACK_ICON: https://github.com/posthog.png?size=48
-                SLACK_MESSAGE: 'Production Cloud Deploy staring :rocket:'
-                SLACK_TITLE: Production Cloud Deploy 
+                SLACK_MESSAGE: 'Production Cloud Deploy :rocket: - ${{ github.event.head_commit.message }}'
+                SLACK_TITLE: Message 
                 SLACK_USERNAME: Max Hedgehog 
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
