--- a/.github/workflows/build-and-deploy-prod.yml
+++ b/.github/workflows/build-and-deploy-prod.yml
@@ -148,7 +148,23 @@ jobs:
                 SLACK_CHANNEL: platform-bots 
                 SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                 SLACK_ICON: https://github.com/posthog.png?size=48
-                SLACK_MESSAGE: 'Production Cloud Deploy :rocket: - ${{ github.event.head_commit.message }}'
+                SLACK_MESSAGE: 'Production Cloud Deploy Github Action Complete :rocket: - ${{ github.event.head_commit.message }}'
+                SLACK_TITLE: Message 
+                SLACK_USERNAME: Max Hedgehog 
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+    slack:
+        name: Notify Slack of start of deploy
+        runs-on: ubuntu-20.04
+        if: github.repository == 'posthog/posthog'
+        steps:
+            - name: Notify Platform team on slack 
+              uses: rtCamp/action-slack-notify@v2
+              env:
+                SLACK_CHANNEL: platform-bots 
+                SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+                SLACK_ICON: https://github.com/posthog.png?size=48
+                SLACK_MESSAGE: 'Production Cloud Deploy Beginning :rocket: - ${{ github.event.head_commit.message }}'
                 SLACK_TITLE: Message 
                 SLACK_USERNAME: Max Hedgehog 
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
