Restore package.json

--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
         "(plugin-server/**).{js,jsx,mjs,ts,tsx}": "eslint -c plugin-server/.eslintrc.js --fix",
         "*.{py,pyi}": [
             "flake8",
+            "black",
             "isort"
         ]
     },
