--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,16 +4,19 @@
 #
 #    pip-compile requirements-dev.in
 #
+appdirs==1.4.4
+    # via black
 asgiref==3.3.2
     # via
     #   -c requirements.txt
     #   django
 attrs==19.3.0
     # via
+    #   black
     #   flake8-bugbear
     #   pytest
     #   syrupy
-black==21.12b0
+black==19.10b0
     # via -r requirements-dev.in
 certifi==2019.11.28
     # via
@@ -93,9 +96,8 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
     # via
     #   -r requirements-dev.in
-    #   black
     #   mypy
-mypy==0.910
+mypy==0.931
     # via
     #   -r requirements-dev.in
     #   django-stubs
@@ -112,8 +114,6 @@ pathspec==0.9.0
     # via black
 pip-tools==5.5.0
     # via -r requirements-dev.in
-platformdirs==2.4.1
-    # via black
 pluggy==0.13.1
     # via pytest
 py==1.10.0
@@ -158,6 +158,8 @@ redis==3.4.1
     # via
     #   -c requirements.txt
     #   fakeredis
+regex==2022.1.18
+    # via black
 requests==2.25.1
     # via
     #   -c requirements.txt
@@ -181,10 +183,12 @@ syrupy==1.4.6
     # via -r requirements-dev.in
 toml==0.10.1
     # via
-    #   mypy
+    #   black
     #   pytest
     #   pytest-cov
 tomli==1.2.3
+    # via mypy
+typed-ast==1.5.1
     # via black
 types-freezegun==1.1.3
     # via -r requirements-dev.in
@@ -206,7 +210,6 @@ types-requests==2.26.1
     # via -r requirements-dev.in
 typing-extensions==4.0.1
     # via
-    #   black
     #   django-stubs
     #   djangorestframework-stubs
     #   mypy
