--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "@types/d3-sankey": "^0.11.2",
         "@types/md5": "^2.3.0",
         "@types/react-input-autosize": "^2.2.1",
+        "@types/react-transition-group": "^4.4.4",
         "@types/react-virtualized": "^9.21.14",
         "antd": "^4.17.1",
         "antd-dayjs-webpack-plugin": "^1.0.6",
@@ -114,6 +115,7 @@
         "react-syntax-highlighter": "^13.5.1",
         "react-textarea-autosize": "^8.3.3",
         "react-toastify": "^5.5.0",
+        "react-transition-group": "^4.4.2",
         "react-virtualized": "^9.22.3",
         "redux": "^4.0.5",
         "reselect": "^4.0.0",
