--- a/.github/workflows/foss-release-image-publish.yml
+++ b/.github/workflows/foss-release-image-publish.yml
@@ -4,15 +4,16 @@
 name: Docker FOSS release image
 
 # TODO: Don't sync until ee code relocation is done
-# on:
-#     push:
-#         tags:
-#             - '*.**'
+on:
+    push:
+        tags:
+            - '*.**'
 
 jobs:
     build-push:
         name: Build & push Docker release image
         runs-on: ubuntu-20.04
+        if: ${{false}}
         steps:
             - name: Checkout default branch
               if: github.repository == 'PostHog/posthog-foss'
