--- a/docker-compose.hobby.yml
+++ b/docker-compose.hobby.yml
@@ -49,8 +49,8 @@ services:
         command: ./bin/docker-worker-celery --with-scheduler
         restart: on-failure
         environment:
-            SENTRY_DSN: ${SENTRY_DSN}
-            SITE_URL: https://${DOMAIN}
+            SENTRY_DSN: $SENTRY_DSN
+            SITE_URL: https://$DOMAIN
             DISABLE_SECURE_SSL_REDIRECT: 'true'
             IS_BEHIND_PROXY: 'true'
             DATABASE_URL: 'postgres://posthog:posthog@db:5432/posthog'
@@ -60,7 +60,7 @@ services:
             CLICKHOUSE_VERIFY: 'false'
             KAFKA_URL: 'kafka://kafka'
             REDIS_URL: 'redis://redis:6379/'
-            SECRET_KEY: ${POSTHOG_SECRET}
+            SECRET_KEY: $POSTHOG_SECRET
             PGHOST: db
             PGUSER: posthog
             PGPASSWORD: posthog
