Fix hobby deploy

--- a/docker-compose.hobby.yml
+++ b/docker-compose.hobby.yml
@@ -58,6 +58,7 @@ services:
             CLICKHOUSE_DATABASE: 'posthog'
             CLICKHOUSE_SECURE: 'false'
             CLICKHOUSE_VERIFY: 'false'
+            PRIMARY_DB: 'clickhouse'
             KAFKA_URL: 'kafka://kafka'
             REDIS_URL: 'redis://redis:6379/'
             SECRET_KEY: $POSTHOG_SECRET
