--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,9 @@ idna==2.8
     #   requests
 importlib-metadata==1.6.0
     # via -r requirements.in
-git+https://github.com/PostHog/infi.clickhouse_orm@f6f4838a75513773696737c9ac37a164af9be632
+importlib-resources==5.4.0
+    # via jsonschema
+git+https://github.com/PostHog/infi.clickhouse_orm@6e2e2b7d12d70921139902e2f2d38ccd169ae40b
     # via -r requirements.in
 inflection==0.5.1
     # via drf-spectacular
@@ -254,7 +256,9 @@ vine==1.3.0
 whitenoise==5.2.0
     # via -r requirements.in
 zipp==3.1.0
-    # via importlib-metadata
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
