--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -350,5 +350,6 @@ jobs:
 
             - name: Check async migrations are not required on fresh instances
               run: |
+                  cd deploy
                   python manage.py migrate_clickhouse
                   python manage.py test_async_migrations_not_required
