--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,8 +1,13 @@
-# pip-compile requirements-dev.in
-
+# In order to add, delete or modify a dependency, please update
+# the reference here and then run:
+#
+# - `pip-compile --rebuild requirements.in`
+# - `pip-compile --rebuild requirements-dev.in`
+#
 # Make sure we use production deps for constraining installed dev packages. This
 # is important as otherwise we could be running tests with different versions
 # than production.
+#
 
 -c requirements.txt
 
