--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -54,6 +54,8 @@ djangorestframework-stubs==1.4.0
     # via -r requirements-dev.in
 fakeredis==1.4.5
     # via -r requirements-dev.in
+flake8-assertive==2.0.0
+    # via -r requirements-dev.in
 flake8-bugbear==20.1.4
     # via -r requirements-dev.in
 flake8-colors==0.1.6
@@ -71,6 +73,7 @@ flake8-print==3.1.4
 flake8==3.9.2
     # via
     #   -r requirements-dev.in
+    #   flake8-assertive
     #   flake8-bugbear
     #   flake8-colors
     #   flake8-commas
