--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "chart.js": "^3.6.2",
         "chartjs-adapter-dayjs": "^1.0.0",
         "chartjs-plugin-crosshair": "^1.2.0",
+        "clone": "^2.1.2",
         "clsx": "^1.1.1",
         "core-js": "3.15.2",
         "d3": "^5.15.0",
@@ -142,6 +143,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@types/chart.js": "^2.9.34",
         "@types/chartjs-plugin-crosshair": "^1.1.1",
+        "@types/clone": "^2.1.1",
         "@types/d3": "^7.0.0",
         "@types/jest": "^26.0.15",
         "@types/query-selector-shadow-dom": "^1.0.0",
