--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -95,14 +95,11 @@ jobs:
                   black --check .
                   isort --check-only .
 
-            - name: Lint with flake8
+            - name: Check for errors and code style violations
               run: |
-                  # stop the build if there are Python syntax errors or undefined names
-                  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-                  # exit-zero treats all errors as warnings
-                  flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+                  flake8 .
 
-            - name: Typecheck
+            - name: Check static typing
               run: |
                   mypy .
 
